@@ -2,6 +2,9 @@ Package: R.rsp
 ==============
 
 Version: 0.8.5 [2013-01-20]
+o Added compileRnw() which compiles Sweave and knitr Rnw files.
+o Added typeOfRnw() which tries to infer whether an Rnw file is for
+  Sweave or knitr based on its contents.
 o Added compileKnitr() and corresponding system tests.
 o Added 'knitr' under suggested packages.
 
